--- a/app/components/header/header.component.html
+++ b/app/components/header/header.component.html
@@ -1,3 +1,19 @@
 <header>
-	Header
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-4">
+				<a title="Lírio de Papel" href="/">
+					<img alt="" src="assets/img/logo.png" />
+				</a>
+			</div>
+			<div class="col-sm-8">
+				<nav>
+					<a href="/" class="btn btn-info" role="button">Home</a>
+					<a href="/about" class="btn btn-info" role="button">Quem Somos</a>
+					<a href="/" class="btn btn-info" role="button">Produtos</a>
+					<a href="/" class="btn btn-info" role="button">Contato</a>
+				</nav>
+			</div>
+		</div>
+	</div>
 </header>
