--- a/app/assets/css/base.css
+++ b/app/assets/css/base.css
@@ -1,4 +1,9 @@
 body 				{ font-family: 'opensans'; font-style: normal; font-weight: 400; }
-header				{ background-color: #18223d; color:#fff; padding:10px 0; }
+header				{ background-color: #105171; color:#fff; padding:10px 0 15px; }
 
-nav a 				{ color:#fff; }
+nav a 		        { color:#fff; font-family: 'oilbats'; font-size: 20px!important; }
+nav a:hover,
+nav a.active 		{ color:#ECC256; }
+a:focus {
+    outline: 0;
+    }
