--- a/app/components/footer/footer.component.html
+++ b/app/components/footer/footer.component.html
@@ -1,3 +1,9 @@
 <footer>
-	<h2>footer</h2>
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-12 recLogo">
+				<img alt="" src="assets/img/icon-footer.png" />
+			</div>
+		</div>
+	</div>
 </footer>
