--- a/app/assets/css/base.css
+++ b/app/assets/css/base.css
@@ -3,14 +3,19 @@ html, body                  { height:100%; }
 html, body, 
 app-header, app-footer      { width:100%; display: inline-block; }
 body 				        { font-family: 'opensans'; font-style: normal; font-weight: 400; }
-header				        { background-color: #105171; color:#fff; padding:10px 0 15px; border-bottom:2px solid #ECC256; }
 
-nav a 		                { color:#fff; font-family: 'oilbats'; font-size: 20px!important; }
-nav a:hover,
-nav a.active 		        { color:#ECC256; }
+header nav                  { color:#fff; border-bottom:2px solid #ECC256; transition: all 0.5s ease; background-color: rgba(16,81,113,1); }
+header nav #logo            { height: 80px; transition: all 0.5s ease; }
+header .navbar-shrink       { padding:0; background:rgba(16,81,113,0.9); }
+header .navbar-shrink #logo { height: 50px; }
+header nav .navbar-toggler  { font-family: 'oilbats'; color:#fff!important; }
+header nav ul               { list-style: none; margin:0; padding:0; }
+header nav ul li a 		    { color:#fff; font-family:'oilbats'; font-size: 20px!important; }
+header nav ul li a:hover,
+header nav ul li a.active 	{ color:#ECC256; }
 
-.footerBottom               { position:absolute; }
-app-footer                  { bottom:0; left:0; }
+main                        { padding-top: 75px; }
+
 footer                      { background-color: #105171; padding:5px 0; border-top:3px solid #ECC256; }
 footer .recLogo             { padding:15px 0; }
 footer .recLogo img         { margin:0 auto; display: block; }
