--- a/app/components/header/header.component.html
+++ b/app/components/header/header.component.html
@@ -1,20 +1,28 @@
 <header>
-	<div class="container">
-		<div class="row">
-			<div class="col-sm-4">
-				<a title="Lírio de Papel" href="/">
-					<img alt="" src="assets/img/logo.png" />
-				</a>
-			</div>
-			<div class="col-sm-8">
-				<nav>
-					<a data-ng-repeat="obj in vm.menu" 
-						data-ng-class="{'active':vm.getMenuActive(obj.url)}" 
-						data-ng-href="{{obj.url}}"
-						target="{{obj.out}}" 
-						class="btn" role="button">{{obj.title}}</a>
-				</nav>
+	<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+		<div class="container">
+			<a title="Lírio de Papel" href="/">
+				<img id="logo" alt="" src="assets/img/logo.png" />
+			</a>
+			<button class="navbar-toggler navbar-toggler-right" type="button" 
+					data-toggle="collapse" 
+					data-target="#navbarResponsive" 
+					aria-controls="navbarResponsive" 
+					aria-expanded="false" 
+					aria-label="Toggle navigation">
+						Menu
+						<i class="fa fa-bars"></i>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarResponsive">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item" data-ng-repeat="obj in vm.menu">
+						<a data-ng-class="{'active':vm.getMenuActive(obj.url)}" 
+							data-ng-href="{{obj.url}}"
+							target="{{obj.out}}" 
+							class="btn" role="button">{{obj.title}}</a>
+					</li>
+				</ul>
 			</div>
 		</div>
-	</div>
+	</nav>
 </header>
