--- a/app/components/footer/footer.component.html
+++ b/app/components/footer/footer.component.html
@@ -1,9 +1,9 @@
 <footer>
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-12 recLogo">
+			<!-- <div class="col-sm-12 recLogo">
 				<img alt="" src="assets/img/icon-footer.png" />
-			</div>
+			</div> -->
 		</div>
 	</div>
 </footer>
